spacing fixes

--- a/src/containers/AboutSection/styles.modules.css
+++ b/src/containers/AboutSection/styles.modules.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   column-gap: 84px;
-  padding: 92px 0;
+  padding: 92px 24px;
 }
 
 .t-gradient {
